# whu

bev_centerline/: .gitignore  README.md  pyproject.toml  requirements.txt
bev_centerline/configs/: infer.yaml  stage1_segmentation.yaml  stage2_alignment.yaml  stage3_json_lora.yaml
bev_centerline/docs/: 00_beginner_guide.md  01_project_overview.md  02_architecture.md  03_training_stages.md  04_stage1_seg_eval.md  05_inference.md  06_config.md  07_quickstart.md  08_dataset_format.md  09_weights.md
bev_centerline/scripts/: check_setup.sh  eval_stage1.sh  infer.sh  train_stage1.sh  train_stage2.sh  train_stage3.sh
bev_centerline/src/bev_centerline_mm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bev_centerline/src/centerline_mm/data/: generation_dataset.py  sharegpt.py  stage1_dataset.py  transforms.py
bev_centerline/src/centerline_mm/eval/: seg_metrics.py  stage1_eval_seg.py
bev_centerline/src/centerline_mm/infer/: generate_json.py
bev_centerline/src/centerline_mm/models/: dinov3_task_encoder.py  dual_path_model.py  qwen_mm.py  segmentation.py  task_projection.py  token_injection.py
bev_centerline/src/centerline_mm/train/: common.py  stage1_train_seg.py  stage2_train_alignment.py  stage3_train_json_lora.py
bev_centerline/src/centerline_mm/utils/: check_setup.py  checkpoint.py  config.py  geometry_text.py  json_format.py  runtime.py
data_builder/: README.md
data_builder/builder/: build.py  config.py  geo.py  io_utils.py  rendering.py  (+2 more)
dataset_builder/: README.md
qwen3.5_2B/: .msc  .mv  README.md  model.safetensors.index.json
(+15 files in other folders)
